# tg-management-bot

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  generate_mock_data.py  import_members.py  init_data.sql  main.py  pyproject.toml  run_migration.py  upload_to_github.bat  upload_to_github.sh  upload_to_new_repo.bat  userbot_login.py
app/config/: settings.py
app/database/: connection.py  migrations.py  views.py
app/handlers/: ai.py  ai_summary_handlers.py  bin_handlers.py  bind.py  category_management_handlers.py  commands.py  delete_resource_snippet.py  digest_config_handlers.py  dm_handlers.py  dm_rating_handlers.py  events.py  leaderboard.py  message_query_handlers.py  points_handlers.py  resource_handlers.py  resource_management_handlers.py  stats.py  summary_handlers.py  userbot.py
app/handlers/leaderboards/: __init__.py  (+8 more)
app/models/: __init__.py  bin_card.py  bin_config.py  bin_site.py  category.py  channel_binding.py  crawl_task.py  db_version.py  digest_config.py  dm_detection.py  dm_relay.py  group.py  member.py  message.py  points.py  resource.py  scammer_detection.py  summary.py  tag.py  user_profile.py
app/services/: __init__.py  dm_detection_service.py  image_detector.py  image_queue.py  llm_service.py  nsfw_detector.py  points_service.py  resource_service.py
app/utils/: auto_delete.py  channel_cache.py  markdown.py  message_utils.py  rate_limiter.py  reply_handler_manager.py  user_resolver.py
migrations/: 20260121_fix_dm_relay_user_id_bigint.sql  20260121_fix_telegram_id_bigint.sql  create_digest_config.sql
(+11 files in other folders)
